--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sleak-magazine",
   "private": true,
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "Website for »sleak« – design magazine",
   "scripts": {
     "serve": "node scripts/serve.js",
@@ -40,40 +40,41 @@
   },
   "homepage": "https://github.com/jonaskuske/sleak-magazine#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "autoprefixer": "^9.6.0",
-    "chalk": "^2.4.2",
-    "dotenv": "^8.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "autoprefixer": "^9.7.1",
+    "babel-eslint": "^10.0.3",
+    "chalk": "^3.0.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "express": "^4.17.1",
-    "fast-glob": "^2.2.7",
-    "gh-pages": "^2.0.1",
-    "lint-staged": "^8.2.0",
-    "parcel-bundler": "^1.12.3",
+    "fast-glob": "^3.1.0",
+    "gh-pages": "^2.1.1",
+    "lint-staged": "^9.4.2",
+    "parcel-bundler": "^1.12.4",
     "parcel-plugin-asset-copier": "^1.0.0",
     "parcel-plugin-bundle-manifest": "^0.2.0",
     "parcel-plugin-clean-dist": "0.0.6",
-    "parcel-plugin-sitemap": "^2.1.1",
+    "parcel-plugin-sitemap": "^2.1.5",
     "postcss-custom-media": "^7.0.8",
     "postcss-focus-visible": "^4.0.0",
     "postcss-smoothscroll-anchor-polyfill": "^2.0.1",
     "posthtml-expressions": "^1.1.1",
-    "prettier": "^1.18.2",
-    "rimraf": "^2.6.3",
-    "simple-git": "^1.113.0",
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.0",
+    "simple-git": "^1.126.0",
     "write-pkg": "^4.0.0",
     "yorkie": "^2.0.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "element-closest": "^3.0.1",
-    "focus-visible": "^4.1.5",
+    "core-js": "^2.6.10",
+    "element-closest": "^3.0.2",
+    "focus-visible": "^5.0.2",
     "intersection-observer": "^0.7.0",
     "normalize.css": "^8.0.1",
-    "smoothscroll-anchor-polyfill": "^1.3.0",
+    "smoothscroll-anchor-polyfill": "^1.3.1",
     "smoothscroll-polyfill": "^0.4.4",
     "stickyfilljs": "^2.1.0",
     "whatwg-fetch": "^3.0.0"
@@ -104,6 +105,7 @@
     "extends": [
       "plugin:prettier/recommended"
     ],
+    "parser": "babel-eslint",
     "parserOptions": {
       "sourceType": "module",
       "ecmaVersion": 2018
