--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -25,9 +25,11 @@
   "src/assets/styles/index.css": "https:/dmp-magazin.de/styles.52472b88.css",
   "src/assets/fonts/BebasNeue.otf": "https:/dmp-magazin.de/BebasNeue.543f6143.otf",
   "src/assets/images/image-loading.svg": "https:/dmp-magazin.de/image-loading.91ecacb7.svg",
-  "src/utils/appshell.js": "https:/dmp-magazin.de/appshell.37256db4.js",
+  "src/utils/appshell.js": "https:/dmp-magazin.de/appshell.02d891d4.js",
+  "node_modules/whatwg-fetch/fetch.js": "https:/dmp-magazin.de/fetch.4cbfa657.js",
+  "node_modules/focus-visible/dist/focus-visible.js": "https:/dmp-magazin.de/focus-visible.513ffc95.js",
   "serviceworker.js": "https:/dmp-magazin.de/serviceworker.js",
-  "src/main.js": "https:/dmp-magazin.de/main.8358d2cb.js",
+  "src/main.js": "https:/dmp-magazin.de/main.3205a39d.js",
   "src/assets/images/sleak-logo.svg": "https:/dmp-magazin.de/sleak-logo.7441a400.svg",
   "team.html": "https:/dmp-magazin.de/team.html",
   "src/team.js": "https:/dmp-magazin.de/team.5b6c1758.js",
